<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_over_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AC8484">

    <TextView
        android:id="@+id/title_text_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_game_over"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/home_button_game_over"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="homeButtonOnClick"
        android:text="@string/home_game_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/again_button_game_over"
        app:layout_constraintTop_toBottomOf="@+id/title_text_game_over" />

    <Button
        android:id="@+id/again_button_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="againButtonOnClick"
        android:text="@string/again_game_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_button_game_over"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_game_over" />

    <Button
        android:id="@+id/submit_button_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitButtonOnClick"
        android:text="@string/submit_game_over"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/again_button_game_over" />
</androidx.constraintlayout.widget.ConstraintLayout>