<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_popup_high_score"
        android:contentDescription="@null"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_baseline_cake_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <EditText
        android:id="@+id/name_text_popup_high_score"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/icon_popup_high_score"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="24sp"
        android:hint="@string/name_popup_high_score"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/back_button_popup_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="popupBackButtonOnClick"
        android:text="@string/back_popup_high_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_popup_high_score"
        app:layout_constraintVertical_bias="0.395" />

    <Button
        android:id="@+id/submit_button_popup_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="popupSubmitButtonOnClick"
        android:text="@string/submit_popup_high_score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.749"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text_popup_high_score"
        app:layout_constraintVertical_bias="0.395" />

</androidx.constraintlayout.widget.ConstraintLayout>